syntax = "proto3";

package activity;

option go_package="./services";
// import "google/protobuf/timestamp.proto";

service activity {
    rpc CreateActivity(Activity) returns (Response);
    rpc GetActivitys(Empty) returns (stream Activity);
    rpc GetActivity(ActivityId) returns (Activity);
    rpc EditActivity(Activity) returns (Response);
    rpc DeleteActivity(ActivityId) returns (Response);
}

message Empty {}

message ActivityId {
  string id = 1;
}

message Activity {
    string Name = 1;
    string Description = 2;
    string ImageProfile = 3;
    repeated string Type = 4;
    string OwnerId = 5;
    string Location = 6;
    int64 MaxParticipant = 7;
    repeated string Participant = 8;
    string Date = 9;
    int32 Duration = 10;
    string ChatId = 11;
}

message Response {
    int64 Status = 1;
    string Message = 2;
  }